--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME="Soluciones Digitales Sanitarias"
 APP_ENV=local
-APP_KEY=base64:0B6yVEFohOTBsdnJP+l7oicsI3ooTTEAdW/xTHFV2eo=
+APP_KEY=base64:642PmWqV9k8jaYkl53oN3B/9OEqqLvjnX2KVG95iGZk=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel_roles
+DB_DATABASE=expediente
 DB_USERNAME=root
 DB_PASSWORD=
 
